API-880: GitHub action

--- a/.github/workflows/validate_rst_docs.yml
+++ b/.github/workflows/validate_rst_docs.yml
@@ -28,22 +28,11 @@ jobs:
         pip install -U sphinx==1.8.1
         pip install -U sphinx-autobuild==0.7.1
         make html
-
-    deploy:
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - run: somebuild
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-          publish_branch: ${{ GITHUB_REF }}  # deploying branch
+    - name: HTML Preview
+      id: html_preview
+      uses: pavi2410/html-preview-action@v2
+      with:
+      html_file: 'build/html/genindex.js'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
 #     steps:
