--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Hit the staging deploy webhook
         run: |
-          curl -X POST \
+          curl -o /dev/null -X POST \
           -F token=${{ secrets.STAGING_PIPELINE_DEPLOY_TOKEN }} \
           -F ref=${{ secrets.STAGING_PIPELINE_DEPLOY_REF }} \
           ${{ secrets.STAGING_PIPELINE_DEPLOY_URL }}
