--- a/.github/workflows/validate_rst_docs.yml
+++ b/.github/workflows/validate_rst_docs.yml
@@ -18,7 +18,8 @@ jobs:
         python-version: 3.6
     - name: Install dependencies
       run: |
-        pip install -U sphinx==2.0.1
+        pip install -U docutils==0.17
+        pip install -U sphinx==1.8.1
         pip install -U sphinx-autobuild==0.7.1
     - name: Build static html documentation
       run: |
