--- a/.github/workflows/validate_rst_docs.yml
+++ b/.github/workflows/validate_rst_docs.yml
@@ -18,9 +18,9 @@ jobs:
         python-version: 3.13.0
     - name: Install dependencies
       run: |
-        pip install -U docutils==0.17
-        pip install -U sphinx==1.8.1
-        pip install -U sphinx-autobuild==0.7.1
+        pip install -U docutils==0.21.2
+        pip install -U sphinx==1.8.6
+        pip install -U sphinx-autobuild
     - name: Build static html documentation
       run: |
         cd .github/workflows/validate_rst_docs_files/
