--- a/.github/workflows/validate_rst_docs.yml
+++ b/.github/workflows/validate_rst_docs.yml
@@ -12,15 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.6
+    - name: Set up Python 3.13.0
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.13.0
     - name: Install dependencies
       run: |
-        pip install -U docutils==0.17
-        pip install -U sphinx==1.8.1
-        pip install -U sphinx-autobuild==0.7.1
+        pip install -U docutils
+        pip install -U sphinx
+        pip install -U sphinx-autobuild
     - name: Build static html documentation
       run: |
         cd .github/workflows/validate_rst_docs_files/
